# knightoffaith.systems

./: .gitignore  404.html  LICENSE  README.md  TODO.md  about.html  build.sh  flake.nix  index.html  knightoffaith.cabal  reading-list.html  result  site.hs  tailwind.config.js  template-post.typ
_cache/: -1133095239220484772  -147666267010296978  -1905129311526295267  -1982928503135253577  -2178879796303829763  -2673186991814299995  -2760484696904963013  -2923242094624846964  -3482393035754410997  -3878095713735240481  -3934999110366727594  -4367051702749675799  -4416339552849047067  -4672714514288693882  -4984635773689668071  -5299518343852417176  -548933775655904357  -5800314654223908896  -6132953657153319809  -6192765703707134720  -6377626924526459400  -6609606525755843238  -6631110268012811969  -6753322086214610012  -746152145657596274  -7665198824870934943  -7899168919100431999  -835681180287803373  -8592925311735819049  -8599732261467578853  -930254371509817899  -934627192704669614  1148499683002898700  1630214562031134648  2191919442085255461  3137010399628483826  3200466723247967333  3524017635796490309  3526029723547597453  3814470328507957169  (+14 more)
css/: code.css  input.css
dist-newstyle/cache/: compiler  config
docs/: 404.html  CNAME  about.html  archive.html  code-example.html  feed.atom  first-post.html  index.html  reading-list.html
docs/css/: highlighter.css  style.css
docs/js/: code.js
docs/tags/: css.html  html.html  (+3 more)
posts/: code-example.md  code-example.typ  first-post.typ  gen-pdf.sh
templates/: archive.html  default.html  post.html  tag.html
